--- a/index.html
+++ b/index.html
@@ -1,9 +1,3 @@
-<!DOCTYPE HTML>
-<html>
-  <head>
-    <title>Test Page</title>
-  </head>
-  <body>
-    <h1>Hello,World!</h1>
-  </body>
-</html>
+---
+layout: default
+---
